# QtSimpleBrowser

./: .gitignore  CMakeLists.txt  browserwindow.cpp  browserwindow.h  main.cpp  simplebrowser.pro
DllFunc/: CMakeLists.txt  library.cpp  library.h
data/: resource.rc
doc/: Qt5 develop book summary.txt
